#main --AT-- experience section overflowing horizontaly on some viewports solved'

--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -458,7 +458,7 @@ a
 .xp-section
     &__contents-wrapper
         display: grid
-        grid-template-columns: 1fr 1fr 1fr
+        grid-template-columns: repeat(auto-fit, minmax(410px, 1fr))
         gap: 2rem
     .xp-card
         &
